array test passed